--- a/privateGPT-colab.ipynb
+++ b/privateGPT-colab.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMABXx5emwLbbW8/bcj4XHl",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -27,13 +25,15 @@
       },
       "outputs": [],
       "source": [
+        "# Install the GPU branch\n",
         "%cd /content\n",
-        "!git clone https://github.com/imartinez/privateGPT"
+        "!git clone -b gpu https://github.com/maozdemir/privateGPT"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Install dependencies\n",
         "%cd /content/privateGPT\n",
         "!pip3 install -r requirements.txt\n",
         "\n",
@@ -47,13 +47,13 @@
         "\n",
         "%cd /content\n",
         "\n",
-        "!pip3 uninstall llama-cpp-python\n",
+        "!pip3 uninstall llama-cpp-python -y\n",
         "!pip3 install scikit-build\n",
         "%cd /content/llama-cpp-python\n",
         "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 python3 ./setup.py install\n",
         "\n",
         "%cd /content/langchain\n",
-        "!pip3 uninstall langchain\n",
+        "!pip3 uninstall langchain -y\n",
         "!pip3 install -e ."
       ],
       "metadata": {
@@ -65,6 +65,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Install Koala 7B GGML Q4\n",
         "!mkdir /content/privateGPT/models/\n",
         "%cd /content/privateGPT/models/\n",
         "!wget https://huggingface.co/TheBloke/koala-7B-GGML/resolve/main/koala-7B.ggml.q4_0.bin"
@@ -78,7 +79,11 @@
     {
       "cell_type": "code",
       "source": [
-        "!mv /content/privateGPT/example.env /content/privateGPT/.env "
+        "# Modify .env\n",
+        "!mv /content/privateGPT/example.env /content/privateGPT/.env \n",
+        "!sed -i 's/n_gpu_layers=10/n_gpu_layers=500/' /content/privateGPT/.env \n",
+        "!sed -i 's/MODEL_TYPE=GPT4All/MODEL_TYPE=LlamaCpp/' /content/privateGPT/.env \n",
+        "!sed -i 's/ggml-gpt4all-j-v1.3-groovy.bin/koala-7B.ggml.q4_0.bin/' /content/privateGPT/.env "
       ],
       "metadata": {
         "id": "pk1pUoMH-DMl"
@@ -89,6 +94,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# These were required before (for some filetypes), idk now\n",
         "!apt install pandoc\n",
         "!pip3 install unstructured"
       ],
@@ -101,6 +107,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Ingest sources\n",
         "%cd  /content/privateGPT/\n",
         "!python3 ingest.py"
       ],
@@ -113,6 +120,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Run the chatbot\n",
         "!python3 privateGPT.py"
       ],
       "metadata": {
@@ -124,6 +132,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Clear database\n",
         "!rm -rf /content/privateGPT/db"
       ],
       "metadata": {
@@ -135,6 +144,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Zip the database if will reuse without recreating vectors\n",
         "!zip -r /content/db.zip /content/privateGPT/db\n"
       ],
       "metadata": {
