Update default model, env patches and dependency installation
Fixes #5

--- a/privateGPT-colab.ipynb
+++ b/privateGPT-colab.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/maozdemir/71246ff1f2dccddfe32c323891f1c531/privategpt-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -37,24 +48,10 @@
         "%cd /content/privateGPT\n",
         "!pip3 install -r requirements.txt\n",
         "\n",
-        "%cd /content\n",
-        "!rm -rf langchain\n",
-        "!rm -rf llama-cpp-python\n",
-        "!git clone https://github.com/hwchase17/langchain\n",
-        "!git clone https://github.com/abetlen/llama-cpp-python\n",
-        "%cd llama-cpp-python/vendor\n",
-        "!git clone https://github.com/ggerganov/llama.cpp\n",
-        "\n",
-        "%cd /content\n",
-        "\n",
         "!pip3 uninstall llama-cpp-python -y\n",
-        "!pip3 install scikit-build\n",
-        "%cd /content/llama-cpp-python\n",
-        "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 python3 ./setup.py install\n",
+        "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 pip3 install llama-cpp-python\n",
         "\n",
-        "%cd /content/langchain\n",
-        "!pip3 uninstall langchain -y\n",
-        "!pip3 install -e ."
+        "!pip3 install langchain"
       ],
       "metadata": {
         "id": "tGVg-tfi0zxb"
@@ -65,10 +62,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Install Koala 7B GGML Q4\n",
+        "# Install Koala 7B GGMLv3 Q4\n",
         "!mkdir /content/privateGPT/models/\n",
         "%cd /content/privateGPT/models/\n",
-        "!wget https://huggingface.co/TheBloke/koala-7B-GGML/resolve/main/koala-7B.ggml.q4_0.bin"
+        "!wget https://huggingface.co/TheBloke/koala-7B-GGML/resolve/main/koala-7B.ggmlv3.q4_0.bin"
       ],
       "metadata": {
         "id": "2qopnwcq9skt"
@@ -80,10 +77,11 @@
       "cell_type": "code",
       "source": [
         "# Modify .env\n",
-        "!mv /content/privateGPT/example.env /content/privateGPT/.env \n",
-        "!sed -i 's/n_gpu_layers=10/n_gpu_layers=500/' /content/privateGPT/.env \n",
-        "!sed -i 's/MODEL_TYPE=GPT4All/MODEL_TYPE=LlamaCpp/' /content/privateGPT/.env \n",
-        "!sed -i 's/ggml-gpt4all-j-v1.3-groovy.bin/koala-7B.ggml.q4_0.bin/' /content/privateGPT/.env "
+        "!mv /content/privateGPT/example.env /content/privateGPT/.env\n",
+        "!sed -i 's/n_gpu_layers=10/n_gpu_layers=500/' /content/privateGPT/.env\n",
+        "!sed -i 's/MODEL_TYPE=GPT4All/MODEL_TYPE=LlamaCpp/' /content/privateGPT/.env\n",
+        "!sed -i 's/ggml-gpt4all-j-v1.3-groovy.bin/koala-7B.ggmlv3.q4_0.bin/' /content/privateGPT/.env\n",
+        "!sed -i 's/IS_GPU_ENABLED=False/IS_GPU_ENABLED=True/' /content/privateGPT/.env"
       ],
       "metadata": {
         "id": "pk1pUoMH-DMl"
@@ -121,6 +119,7 @@
       "cell_type": "code",
       "source": [
         "# Run the chatbot\n",
+        "%cd /content/privateGPT/\n",
         "!python3 privateGPT.py"
       ],
       "metadata": {
@@ -145,7 +144,7 @@
       "cell_type": "code",
       "source": [
         "# Zip the database if will reuse without recreating vectors\n",
-        "!zip -r /content/db.zip /content/privateGPT/db\n"
+        "!zip -r /content/db.zip /content/privateGPT/db"
       ],
       "metadata": {
         "id": "VGrB8tGR1NE4"
